# icaruscode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meaningless_test_file.txt
fcl/: CMakeLists.txt  OverburdenConfigurations.txt  SkipTesting.txt  larg4_icarus.fcl  prodsingle_common_icarus.fcl
fcl/archives/: README.md
fcl/caf/: CMakeLists.txt  cafmaker_add_detsim2d_icarus.fcl  cafmaker_add_overlay_icarus.fcl  cafmaker_defs.fcl  cafmakerjob_icarus.fcl  cafmakerjob_icarus_2Xsce_detsim2d_overlay.fcl  cafmakerjob_icarus_cosmic_detsim2d.fcl  cafmakerjob_icarus_data.fcl  cafmakerjob_icarus_data_NuGraphReco.fcl  cafmakerjob_icarus_data_allcalopoints.fcl  cafmakerjob_icarus_data_rereco_numi.fcl  cafmakerjob_icarus_data_rereco_numi_Run1.fcl  cafmakerjob_icarus_data_rereco_numi_Run1_ReprocRelease.fcl  cafmakerjob_icarus_data_rereco_numi_Run2OffBeam.fcl  cafmakerjob_icarus_data_rereco_numi_Run2OffBeam_ReprocRelease.fcl  cafmakerjob_icarus_data_rereco_numi_Run2OnBeam.fcl  cafmakerjob_icarus_data_rereco_numi_Run2OnBeam_ReprocRelease.fcl  cafmakerjob_icarus_detsim2d.fcl  cafmakerjob_icarus_detsim2d_NuGraphReco.fcl  cafmakerjob_icarus_detsim2d_noevtwgt.fcl  cafmakerjob_icarus_detsim2d_noyzsim.fcl  cafmakerjob_icarus_detsim2d_overlay.fcl  cafmakerjob_icarus_detsim2d_overlay_simpledet.fcl  cafmakerjob_icarus_detsim2d_simpledet.fcl  cafmakerjob_icarus_detsim2d_systtools.fcl  cafmakerjob_icarus_detsim2d_systtools_and_fluxwgt.fcl  cafmakerjob_icarus_detsim2d_systtools_and_fluxwgt_NuGraphReco.fcl  cafmakerjob_icarus_detsim2d_systtools_and_fluxwgt_and_geant4reweight.fcl  cafmakerjob_icarus_detsim2d_systtools_and_fluxwgt_overlay.fcl  cafmakerjob_icarus_detsim2d_systtools_and_fluxwgt_overlay_hits.fcl  cafmakerjob_icarus_detsim2d_systtools_fluxwgt_g4rw.fcl  cafmakerjob_icarus_detsim2d_systtools_fluxwgt_g4rw_overlay.fcl  cafmakerjob_icarus_evtw.fcl  cafmakerjob_icarus_mc_allcalopoints.fcl  cafmakerjob_icarus_noana.fcl  cafmakerjob_icarus_nocaf.fcl  cafmakerjob_icarus_sce.fcl  cafmakerjob_icarus_sce_detsim2d_overlay.fcl  cafmakerjob_icarus_sce_evtw.fcl  cafmakerjob_icarus_sce_genie.fcl  (+12 more)
fcl/calorimetry/: detsim_QLcorr_calorimetry_workshop2020.fcl  electron_proton_bnblike_center_calorimetry_workshop2020.fcl  filter_numu_pizero_calorimetry_workshop_2020.fcl  g4_QLcorr_calorimetry_workshop2020.fcl  g4_calorimetry_workshop2020.fcl  mu_proton_bnblike_cathode_calorimetry_workshop2020.fcl  mu_proton_bnblike_center_calorimetry_workshop2020.fcl  pionbnblike_calorimetry_workshop2020.fcl  protonbnblike_calorimetry_workshop2020.fcl  reco1_calorimetry_workshop2020.fcl  reco2_calorimetry_workshop2020.fcl
fcl/compatibility/: services_compat_icarus-v09_18_00-v09_24_02_02.fcl  services_compat_icarus_v3.fcl  services_compat_no_overburden_icarus_v3.fcl  services_compat_overburden_icarus_v3.fcl
fcl/configurations/: 3drift_services_config_icarus.fcl  beamgates_icarus.fcl  calibration_database_CRT_TagSets_icarus.fcl  calibration_database_GlobalTags_icarus.fcl  calibration_database_PMT_TagSets_icarus.fcl  calibration_database_TPC_TagSets_icarus.fcl  calibration_database_TagSets_icarus.fcl  calorimetry_icarus.fcl  cluster_icarus.fcl  database_icarus.fcl  flashmatch_simple_icarus.fcl  larg4_icarus_defs.fcl  pandoramodules_icarus.fcl  particleid_icarus.fcl  radiological_model_icarus.fcl  rootoutput_icarus.fcl  showerfindermodules_icarus.fcl  spacecharge_icarus.fcl  trackfindermodules_icarus.fcl
fcl/decoder/: decoder_data_icarus.fcl  decoder_run2_icarus.fcl
fcl/detsim/: CMakeLists.txt  crt_detsim_only_lite.fcl  detsim_1d_icarus.fcl  detsim_1d_icarus_lite.fcl  detsim_2d_icarus.fcl  detsim_2d_icarus_SConly.fcl  detsim_2d_icarus_diff-10.fcl  detsim_2d_icarus_diff10.fcl  detsim_2d_icarus_fitFR.fcl  detsim_2d_icarus_fitFR_nonoise.fcl  detsim_2d_icarus_fitFR_overlay.fcl  detsim_2d_icarus_fitFR_refactored.fcl  detsim_2d_icarus_lite.fcl  detsim_2d_icarus_refactored.fcl  detsim_2d_icarus_refactored_Run4.fcl  detsim_2d_icarus_refactored_nonoise.fcl  detsim_2d_icarus_refactored_overlay.fcl  detsim_2d_icarus_refactored_overlay_Run4.fcl  detsim_2d_icarus_refactored_yzsim.fcl  detsim_2d_icarus_refactored_yzsim_Run4.fcl  detsim_2d_icarus_refactored_yzsim_allSimChannels.fcl  detsim_2d_icarus_refactored_yzsim_notrigger.fcl  detsim_2d_icarus_refactored_yzsim_notrigger_overlay.fcl  detsim_2d_icarus_refactored_yzsim_overlay.fcl  detsim_2d_icarus_refactored_yzsim_overlay_Run4.fcl  detsim_2d_icarus_shiftForTrigger.fcl  detsim_2d_icarus_shiftForTrigger_fitFR.fcl  detsim_2d_icarus_shiftForTrigger_fitFR_refactored.fcl  detsim_2d_icarus_shiftForTrigger_refactored.fcl  detsim_2d_icarus_shiftForTrigger_refactored_fitFR.fcl  detsim_3drift_windows.fcl  detsim_3drift_windows_icarus.fcl  multitpc_detsim32_icarus.fcl  multitpc_detsim_icarus.fcl  multitpc_detsim_icarus_board.fcl  multitpc_detsim_icarus_overburden.fcl  sbnworkshop_detsim_icarus.fcl  standard_detsim32_icarus.fcl  standard_detsim_icarus.fcl  standard_detsim_icarus_board.fcl  (+4 more)
fcl/empty/: emptyevent_icarus.fcl  prod_empty_icarus.fcl
fcl/evd/: CMakeLists.txt  evd_icarus.fcl  evd_icarusraw.fcl  evd_multitpc_icarus.fcl  evdservices_icarus.fcl
fcl/g4/: CMakeLists.txt  PDFastSim_icarus.fcl  cosmics_g4_3readout_windows.fcl  cosmics_g4_enable_spacecharge.fcl  cosmics_g4_icarus.fcl  cosmics_g4_icarus_lite.fcl  cosmics_g4_icarus_mappedphotonlibrary.fcl  cosmics_g4_icarus_nosce_nodiffusion_3500.fcl  cosmics_g4_icarus_nosce_nodiffusion_6000.fcl  cosmics_g4_icarus_sce.fcl  cosmics_g4_icarus_sce_lite.fcl  cosmics_g4_icarus_sce_nodiffusion_3500.fcl  cosmics_g4_icarus_sce_nodiffusion_6000.fcl  cosmics_g4_icarus_volCryostat.fcl  cosmics_g4_icarus_volCryostat_lite.fcl  cosmics_g4_icarus_volDetEnc.fcl  cosmics_g4_icarus_volDetEnc_lite.fcl  cosmics_g4_icarus_volDetEnc_mappedphotonlibrary.fcl  dirts_bnb_g4_sce_on.fcl  g4_cosmics_purity_1ms.fcl  g4_cosmics_sce_on.fcl  g4_enable_doublespacecharge.fcl  g4_enable_spacecharge.fcl  g4_farnese_purity_6000.fcl  g4_icarus_change_elect_lifetime.fcl  g4_icarus_no_light.fcl  g4_sce_on.fcl  larg4_icarus.fcl  (+45 more)
icarus/: CMakeLists.txt
icaruscode/: CMakeLists.txt
(+2938 files in other folders)
