add_subdirectory(configurations)
add_subdirectory(evd)
add_subdirectory(detsim)
add_subdirectory(empty)
add_subdirectory(g4)
add_subdirectory(gen)
add_subdirectory(reco)
add_subdirectory(caf)
add_subdirectory(services)
add_subdirectory(utilities)
add_subdirectory(compatibility)
add_subdirectory(numi-anaA)
add_subdirectory(syst_variations)

install_fhicl()
