
set( IFDH_ART_DIR $ENV{IFDH_ART_DIR} )

add_subdirectory(Analysis)
add_subdirectory(CRT)
add_subdirectory(Filters)
add_subdirectory(gallery)
add_subdirectory(Generators)
add_subdirectory(Geometry)
add_subdirectory(LArG4)
add_subdirectory(PMT)
add_subdirectory(RecoUtils)
add_subdirectory(TPC)
add_subdirectory(Utilities)

add_subdirectory(Decode)

#add_subdirectory(LArCVImageMaker)

add_subdirectory(LArProduceML)
